--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   "scripts": {
     "build": "node build.mjs",
     "test": "jest",
-    "format": "prettier --write '**/*.{ts,mjs,js,html,css,json,md}'"
+    "format": "prettier --write '**/*.{ts,mjs,js,html,css,json,md}'",
+    "dev": "miniflare --watch --debug --port 8787",
+    "publish": "cross-env NODE_ENV=production wrangler publish"
   },
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/workers-types": "^2.2.2",
-    "@types/jest": "^27.0.1",
-    "esbuild": "^0.12.21",
+    "@types/jest": "^27.0.2",
+    "esbuild": "^0.13.4",
     "esbuild-jest": "^0.5.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "jest": "^27.2.4",
+    "miniflare": "^1.4.1",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.3"
   },
   "engines": {
     "node": ">=14"
