--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,19 +1,13 @@
-name = "worker"
-# type = "javascript" is required to use the `[build]` section
+name = "cloudflare-workers-typescript-esbuild-esm"
 type = "javascript"
 account_id = ""
 workers_dev = true
-route = ""
-zone_id = ""
 
 [build]
-command = "npm install && npm test && npm run build"
+command = "npm run build"
 [build.upload]
-# The "modules" upload format is required for all projects that export a Durable Objects class
 format = "modules"
-main = "./index.mjs"
+main = "./worker.mjs"
 
 [durable_objects]
-bindings = [
-  { name = "COUNTER", class_name = "Counter" }
-]
+bindings = []
